# cubapy

./: README.md  instructions  requirements.txt  setup.cfg  setup.py  test.py
cubapy/: plot.py  tri.py
cubapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
