[metadata]
name = cubapy
version = 0.0.2
license = GNU LGPLv3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
packages = cubapy
zip_safe = False
setup_requires = plotly <= 5.10.0;
python_requires = >=3.7
keywords = ['python', 'quadrature', 'cubature']
include_package_data = True